[tool.poetry]
name = "pubsub-emulator"
version = "0.0.4"
description = "An easy-to-use CLI app for effortlessly managing your local Pub/Sub environment and automatically syncing it with your Google Cloud Pub/Sub configuration."
authors = ["Cristobal Sfeir <hello@cristobalsfeir.com>"]
packages = [{ include = "pubsub_emulator" }]

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-pubsub = "^2.18.4"
protobuf = "^4.25.0"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
shellingham = "^1.5.4"
case-converter = "^1.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.17.5"
flake8 = "^6.1.0"
black = "^23.7.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
